--- a/movieApp/movieStyle.css
+++ b/movieApp/movieStyle.css
@@ -6,8 +6,8 @@ li.image {
     border: red thin solid;
 }
 .panel {
-    top: 25%;
-    left: 25%;
+    top: 20%;
+    margin: 0 auto;
     width: 40vw;
     height: 60vh;
 
@@ -15,14 +15,15 @@ li.image {
     min-height: 444px;
     position: relative;
     font-size: .8em;
-    -webkit-perspective: 600px;
-    -moz-perspective: 600px;
-      border: white solid thin;
+    -webkit-perspective: 1000px;
+    -moz-perspective: 1000px;
+
 }
 .panel .poster {
     position: absolute;
+    background-color: #1F1F1F;
     top: 0;
-    z-index: 900;
+    z-index: 1500;
     width: inherit;
     height: inherit;
     text-align: center;
@@ -47,14 +48,14 @@ display: flex;
       
 }
 .panel.flip .poster {
-    z-index: 800;
+    z-index: 2000;
     -webkit-transform: rotateY(-180deg);
     -moz-transform: rotateY(-180deg);
 }
 .panel .movieInfo {
     position: absolute;
     top: 0;
-    z-index: 800;
+    z-index: 1500;
     width: inherit;
     height: inherit;
     text-align: center;
@@ -73,7 +74,7 @@ display: flex;
     transition: all .5s ease-in-out;
 }
 .panel.flip .movieInfo {
-    z-index: 1000;
+    z-index: 2000;
     -webkit-transform: rotateX(0deg) rotateY(0deg);
     -moz-transform: rotateX(0deg) rotateY(0deg);
 }
@@ -81,33 +82,36 @@ display: flex;
 /*Non-flipping*/
 
 .section{
-      background-color: #333;
+      background-color: #D1D5D8;
       padding: 0;
       margin: 0;
       display: flex;
 
 }
  .section1 {
-            background-color: #333;
+            background-color: #000;
 
             padding-left: 100px;
             font-size: 50px;
             padding-top: 50px;
             }
             .section2 {
-            background-color: #444;
+            background-color: #000;
             padding-left: 100px;
             font-size: 50px;
             padding-top: 50px;
             }
             .section3 {
-            background-color: #555;
+            background-color: #000;
             padding-left: 100px;
             font-size: 50px;
             padding-top: 100px;
             }
             body, html {
-            color: #fff;
+
+font-size: 16px;
+  font-family: 'Helvetica', sans-serif;
+
             margin: 0;
             overflow: hidden;
             -webkit-transition: opacity 400ms;
@@ -162,7 +166,7 @@ display: flex;
             position: absolute;
             width: 4px;
             height: 4px;
-            background: rgba(0,0,0,0.85);
+            background: rgba(235,235,235,0.85);
             border-radius: 10px;
             -webkit-border-radius: 10px;
             -moz-border-radius: 10px;
@@ -197,4 +201,63 @@ display: flex;
             body.disabled-onepage-scroll, .disabled-onepage-scroll .onepage-wrapper, html {
             position: inherit;
             }
+
+    p {
+  text-align: left;
+  margin: 24px 0;
+  font-size: 1.5em;
+  line-height: 1.25em;
+  font-weight:  400;
+  font-style:   normal;
+  font-stretch: normal;
+  color: #fff;
+}
+
+
+h2,
+h3 {
+  font-weight:  900;
+  font-style:   normal;
+  font-stretch: normal;
+  color: #666;
+  line-height: 1.5em;
+}
+
+
+h2 {
+  font-size: 1.25em;
+  color: #666;
+  font-weight: 300;
+  text-align: center;
+  padding: 20px;
+}
+
+nav.head{
+  width: 100%;
+  height: 10%;
+  background: #E14938;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 9999;
+  -webkit-box-shadow: 0px 5px 5px 0px rgba(0,0,0,0.85);
+  -moz-box-shadow: 0px 5px 5px 0px rgba(0,0,0,0.85);
+  box-shadow: 0px 5px 5px 0px rgba(0,0,0,0.85);
+}
+nav.foot{
+  width: 100%;
+  height: 10%;
+  background: #E14938;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  margin-top: 25px;
+  -webkit-box-shadow: 0px -5px 5px rgba(0,0,0,0.85);
+  -moz-box-shadow: 0px -5px 5px rgba(0,0,0,0.85);
+  box-shadow: 0px -5px 5px rgba(0,0,0,0.85);  
+  
+}
+nav.foot::before{
+  
+}
 
