--- a/movieApp/movieStyle.css
+++ b/movieApp/movieStyle.css
@@ -1,8 +1,12 @@
 
 li.image {
+
     margin: auto;
+
     width: 50%;
+
     height: 400px;
+
     border: red thin solid;
 }
 .panel {
@@ -10,14 +14,12 @@ li.image {
     margin: 0 auto;
     width: 40vw;
     height: 60vh;
-
     min-width: 300px;
     min-height: 444px;
     position: relative;
     font-size: .8em;
     -webkit-perspective: 1000px;
     -moz-perspective: 1000px;
-
 }
 .panel .poster {
     position: absolute;
@@ -34,18 +36,18 @@ li.image {
     -moz-transform-style: preserve-3d;
     -moz-backface-visibility: hidden;
     /* -- transition is the magic sauce for animation -- */
-    -o-transition: all .4s ease-in-out;
+
+-o-transition: all .4s ease-in-out;
     -ms-transition: all .4s ease-in-out;
     -moz-transition: all .4s ease-in-out;
     -webkit-transition: all .4s ease-in-out;
     transition: all .4s ease-in-out;
 }
 .content .back {
- display: flex;     
+    display: flex;
 }
-.content .front{
-display: flex;
-      
+.content .front {
+    display: flex;
 }
 .panel.flip .poster {
     z-index: 2000;
@@ -62,12 +64,12 @@ display: flex;
     -webkit-transform: rotateY(180deg);
     -webkit-transform-style: preserve-3d;
     -webkit-backface-visibility: hidden;
- 
     -moz-transform: rotateY(180deg);
     -moz-transform-style: preserve-3d;
     -moz-backface-visibility: hidden;
     /* -- transition is the magic sauce for animation -- */
-    -o-transition: all .5s ease-in-out;
+
+-o-transition: all .5s ease-in-out;
     -ms-transition: all .5s ease-in-out;
     -moz-transition: all .5s ease-in-out;
     -webkit-transition: all .5s ease-in-out;
@@ -78,186 +80,172 @@ display: flex;
     -webkit-transform: rotateX(0deg) rotateY(0deg);
     -moz-transform: rotateX(0deg) rotateY(0deg);
 }
-
 /*Non-flipping*/
 
-.section{
-      background-color: #D1D5D8;
-      padding: 0;
-      margin: 0;
-      display: flex;
-
+.section {
+    background-color: #D1D5D8;
+    padding: 0;
+    margin: 0;
+    display: flex;
 }
- .section1 {
-            background-color: #000;
-
-            padding-left: 100px;
-            font-size: 50px;
-            padding-top: 50px;
-            }
-            .section2 {
-            background-color: #000;
-            padding-left: 100px;
-            font-size: 50px;
-            padding-top: 50px;
-            }
-            .section3 {
-            background-color: #000;
-            padding-left: 100px;
-            font-size: 50px;
-            padding-top: 100px;
-            }
-            body, html {
-
-font-size: 16px;
-  font-family: 'Helvetica', sans-serif;
-
-            margin: 0;
-            overflow: hidden;
-            -webkit-transition: opacity 400ms;
-            -moz-transition: opacity 400ms;
-            transition: opacity 400ms;
-            }
-            body, .onepage-wrapper, html {
-            display: block;
-            position: static;
-            padding: 0;
-            width: 100%;
-            height: 100%;
-            }
-            .onepage-wrapper {
-            width: 100%;
-            height: 100%;
-            display: block;
-            position: relative;
-            padding: 0;
-            -webkit-transform-style: preserve-3d;
-            }
-            .onepage-wrapper .section {
-            width: 100%;
-            height: 100%;
-            }
-
-            .onepage-pagination {
-            display: inline;
-            position: absolute;
-            bottom: 10px;
-            left: 50%;
-            z-index: 5;
-            list-style: none;
-
-            margin: 0;
-            padding: 0;
-            }
-            .onepage-pagination li {
-            padding: 0;
-            text-align: center;
-            display: inline;
-            }
-            .onepage-pagination li a{
-            padding: 10px;
-            width: 4px;
-            height: 4px;
-
-            }
-            .onepage-pagination li a:before{
-            content: '';
-
-            position: absolute;
-            width: 4px;
-            height: 4px;
-            background: rgba(235,235,235,0.85);
-            border-radius: 10px;
-            -webkit-border-radius: 10px;
-            -moz-border-radius: 10px;
-            }
-            .onepage-pagination li a.active:before{
-
-            width: 10px;
-            height: 10px;
-            background: none;
-            border: 1px solid black;
-            margin-top: -4px;
-            bottom: 10px;
-            }
-            .disabled-onepage-scroll, .disabled-onepage-scroll .wrapper {
-            overflow: auto;
-            }
-            .disabled-onepage-scroll .onepage-wrapper .section {
-            position: relative !important;
-            left: auto !important;
-            bottom: auto !important;
-            }
-            .disabled-onepage-scroll .onepage-wrapper {
-            -webkit-transform: none !important;
-            -moz-transform: none !important;
-            transform: none !important;
-            -ms-transform: none !important;
-            min-height: 100%;
-            }
-            .disabled-onepage-scroll .onepage-pagination {
-            display: none;
-            }
-            body.disabled-onepage-scroll, .disabled-onepage-scroll .onepage-wrapper, html {
-            position: inherit;
-            }
-
-    p {
-  text-align: left;
-  margin: 24px 0;
-  font-size: 1.5em;
-  line-height: 1.25em;
-  font-weight:  400;
-  font-style:   normal;
-  font-stretch: normal;
-  color: #fff;
+.section1 {
+    background-color: #000;
+    padding-left: 100px;
+    font-size: 50px;
+    padding-top: 50px;
 }
-
-
+.section2 {
+    background-color: #000;
+    padding-left: 100px;
+    font-size: 50px;
+    padding-top: 50px;
+}
+.section3 {
+    background-color: #000;
+    padding-left: 100px;
+    font-size: 50px;
+    padding-top: 100px;
+}
+body,
+html {
+    font-size: 16px;
+    font-family: 'Helvetica', sans-serif;
+    margin: 0;
+    overflow: hidden;
+    -webkit-transition: opacity 400ms;
+    -moz-transition: opacity 400ms;
+    transition: opacity 400ms;
+}
+body,
+.onepage-wrapper,
+html {
+    display: block;
+    position: static;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+}
+.onepage-wrapper {
+    width: 100%;
+    height: 100%;
+    display: block;
+    position: relative;
+    padding: 0;
+    -webkit-transform-style: preserve-3d;
+}
+.onepage-wrapper .section {
+    width: 100%;
+    height: 100%;
+}
+.onepage-pagination {
+    display: inline;
+    position: absolute;
+    bottom: 10px;
+    left: 50%;
+    z-index: 5;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+.onepage-pagination li {
+    padding: 0;
+    text-align: center;
+    display: inline;
+}
+.onepage-pagination li a {
+    padding: 10px;
+    width: 4px;
+    height: 4px;
+}
+.onepage-pagination li a:before {
+    content: '';
+    position: absolute;
+    width: 4px;
+    height: 4px;
+    background: rgba(235, 235, 235, 0.85);
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+}
+.onepage-pagination li a.active:before {
+    width: 10px;
+    height: 10px;
+    background: none;
+    border: 1px solid black;
+    margin-top: -4px;
+    bottom: 10px;
+}
+.disabled-onepage-scroll,
+.disabled-onepage-scroll .wrapper {
+    overflow: auto;
+}
+.disabled-onepage-scroll .onepage-wrapper .section {
+    position: relative !important;
+    left: auto !important;
+    bottom: auto !important;
+}
+.disabled-onepage-scroll .onepage-wrapper {
+    -webkit-transform: none !important;
+    -moz-transform: none !important;
+    transform: none !important;
+    -ms-transform: none !important;
+    min-height: 100%;
+}
+.disabled-onepage-scroll .onepage-pagination {
+    display: none;
+}
+body.disabled-onepage-scroll,
+.disabled-onepage-scroll .onepage-wrapper,
+html {
+    position: inherit;
+}
+p {
+    text-align: left;
+    margin: 24px 0;
+    font-size: 1.5em;
+    line-height: 1.25em;
+    font-weight: 400;
+    font-style: normal;
+    font-stretch: normal;
+    color: #fff;
+}
 h2,
 h3 {
-  font-weight:  900;
-  font-style:   normal;
-  font-stretch: normal;
-  color: #666;
-  line-height: 1.5em;
+    font-weight: 900;
+    font-style: normal;
+    font-stretch: normal;
+    color: #666;
+    line-height: 1.5em;
 }
-
-
 h2 {
-  font-size: 1.25em;
-  color: #666;
-  font-weight: 300;
-  text-align: center;
-  padding: 20px;
+    font-size: 1.25em;
+    color: #666;
+    font-weight: 300;
+    text-align: center;
+    padding: 20px;
 }
-
-nav.head{
-  width: 100%;
-  height: 10%;
-  background: #E14938;
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 9999;
-  -webkit-box-shadow: 0px 5px 5px 0px rgba(0,0,0,0.85);
-  -moz-box-shadow: 0px 5px 5px 0px rgba(0,0,0,0.85);
-  box-shadow: 0px 5px 5px 0px rgba(0,0,0,0.85);
+nav.head {
+    width: 100%;
+    height: 10%;
+    background: #E14938;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 9999;
+    -webkit-box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.85);
+    -moz-box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.85);
+    box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.85);
 }
-nav.foot{
-  width: 100%;
-  height: 10%;
-  background: #E14938;
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  margin-top: 25px;
-  -webkit-box-shadow: 0px -5px 5px rgba(0,0,0,0.85);
-  -moz-box-shadow: 0px -5px 5px rgba(0,0,0,0.85);
-  box-shadow: 0px -5px 5px rgba(0,0,0,0.85);  
-  
+nav.foot {
+    width: 100%;
+    height: 10%;
+    background: #E14938;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    margin-top: 25px;
+    -webkit-box-shadow: 0px -5px 5px rgba(0, 0, 0, 0.85);
+    -moz-box-shadow: 0px -5px 5px rgba(0, 0, 0, 0.85);
+    box-shadow: 0px -5px 5px rgba(0, 0, 0, 0.85);
 }
-nav.foot::before{
-  
-}
-
+nav.foot: :before {}
