--- a/movieApp/movieStyle.css
+++ b/movieApp/movieStyle.css
@@ -1,13 +1,11 @@
 /*Flipping*/
 
-li.image {
+.image {
 
-    margin: auto;
-
+    margin: 0 auto;
     width: 50%;
-
-    height: 400px;
-
+    min-width: 300px;
+    min-height: 400px;
     border: red thin solid;
 }
 .panel {
