--- a/movieApp/movieStyle.css
+++ b/movieApp/movieStyle.css
@@ -1,12 +1,11 @@
 /*Flipping*/
 
 .image {
-
     margin: 0 auto;
     width: 50%;
     min-width: 300px;
     min-height: 400px;
-    border: red thin solid;
+
 }
 .panel {
     top: 20%;
@@ -75,33 +74,14 @@
     -webkit-transform: rotateX(0deg) rotateY(0deg);
     -moz-transform: rotateX(0deg) rotateY(0deg);
 }
-
 /*Non-flipping*/
 
 .section {
-    background-color: #D1D5D8;
+    background-color: #1F1F1F;
     padding: 0;
     margin: 0;
     display: flex;
-}
-.section1 {
-    background-color: #000;
-    padding-left: 100px;
-    font-size: 50px;
-    padding-top: 50px;
-}
-.section2 {
-    background-color: #000;
-    padding-left: 100px;
-    font-size: 50px;
-    padding-top: 50px;
-}
-.section3 {
-    background-color: #000;
-    padding-left: 100px;
-    font-size: 50px;
-    padding-top: 100px;
-}
+}   
 body,
 html {
     font-size: 16px;
@@ -203,19 +183,19 @@ p {
     font-weight: 400;
     font-style: normal;
     font-stretch: normal;
-    color: #fff;
+    color: #D1D5D8;
 }
 h2,
 h3 {
     font-weight: 900;
     font-style: normal;
     font-stretch: normal;
-    color: #666;
+    color: #D1D5D8;
     line-height: 1.5em;
 }
 h2 {
     font-size: 1.25em;
-    color: #666;
+    color: #D1D5D8;
     font-weight: 300;
     text-align: center;
     padding: 20px;
@@ -240,6 +220,7 @@ nav.foot {
     bottom: 0;
     left: 0;
     margin-top: 25px;
+    z-index: 9999;
     -webkit-box-shadow: 0px -5px 5px rgba(0, 0, 0, 0.85);
     -moz-box-shadow: 0px -5px 5px rgba(0, 0, 0, 0.85);
     box-shadow: 0px -5px 5px rgba(0, 0, 0, 0.85);
